@@ -2,32 +2,49 @@
  * tclAppInit.c --
  *
  *	Provides a default version of the main program and Tcl_AppInit
- *	function for Tcl applications (without Tk).
+ *	procedure for tclsh and other Tcl-based applications (without Tk).
  *
  * Copyright (c) 1993 The Regents of the University of California.
  * Copyright (c) 1994-1997 Sun Microsystems, Inc.
- * Copyright (c) 1998-1999 by Scriptics Corporation.
+ * Copyright (c) 1998-1999 Scriptics Corporation.
  *
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclAppInit.c,v 1.11.4.5 2009/11/19 16:51:27 dgp Exp $
+ * RCS: @(#) $Id: tclAppInit.c,v 1.11.4.6 2010/09/23 13:35:43 dgp Exp $
  */
 
 #include "tcl.h"
 
 #ifdef TCL_TEST
-
-#include "tclInt.h"
-
-extern Tcl_PackageInitProc	Tcltest_Init;
-extern Tcl_PackageInitProc	Tcltest_SafeInit;
-
+extern Tcl_PackageInitProc Tcltest_Init;
+extern Tcl_PackageInitProc Tcltest_SafeInit;
 #endif /* TCL_TEST */
 
 #ifdef TCL_XT_TEST
 extern void		XtToolkitInitialize(void);
 extern int		Tclxttest_Init(Tcl_Interp *interp);
+#endif
+
+/*
+ * The following #if block allows you to change the AppInit function by using
+ * a #define of TCL_LOCAL_APPINIT instead of rewriting this entire file. The
+ * #if checks for that #define and uses Tcl_AppInit if it doesn't exist.
+ */
+
+#ifndef TCL_LOCAL_APPINIT
+#define TCL_LOCAL_APPINIT Tcl_AppInit
+#endif
+extern int TCL_LOCAL_APPINIT(Tcl_Interp *interp);
+
+/*
+ * The following #if block allows you to change how Tcl finds the startup
+ * script, prime the library or encoding paths, fiddle with the argv, etc.,
+ * without needing to rewrite Tcl_Main()
+ */
+
+#ifdef TCL_LOCAL_MAIN_HOOK
+extern int TCL_LOCAL_MAIN_HOOK(int *argc, char ***argv);
 #endif
 
 /*
@@ -38,11 +55,11 @@ extern int		Tclxttest_Init(Tcl_Interp *interp);
  *	This is the main program for the application.
  *
  * Results:
- *	None: Tcl_Main never returns here, so this function never returns
+ *	None: Tcl_Main never returns here, so this procedure never returns
  *	either.
  *
  * Side effects:
- *	Whatever the application does.
+ *	Just about anything, since from here we call arbitrary Tcl code.
  *
  *----------------------------------------------------------------------
  */
@@ -52,28 +69,6 @@ main(
     int argc,			/* Number of command-line arguments. */
     char **argv)		/* Values of command-line arguments. */
 {
-    /*
-     * The following #if block allows you to change the AppInit function by
-     * using a #define of TCL_LOCAL_APPINIT instead of rewriting this entire
-     * file. The #if checks for that #define and uses Tcl_AppInit if it does
-     * not exist.
-     */
-
-#ifndef TCL_LOCAL_APPINIT
-#define TCL_LOCAL_APPINIT Tcl_AppInit
-#endif
-    extern int TCL_LOCAL_APPINIT(Tcl_Interp *interp);
-
-    /*
-     * The following #if block allows you to change how Tcl finds the startup
-     * script, prime the library or encoding paths, fiddle with the argv,
-     * etc., without needing to rewrite Tcl_Main()
-     */
-
-#ifdef TCL_LOCAL_MAIN_HOOK
-    extern int TCL_LOCAL_MAIN_HOOK(int *argc, char ***argv);
-#endif
-
 #ifdef TCL_XT_TEST
     XtToolkitInitialize();
 #endif
@@ -83,7 +78,6 @@ main(
 #endif
 
     Tcl_Main(argc, argv, TCL_LOCAL_APPINIT);
-
     return 0;			/* Needed only to prevent compiler warning. */
 }
 
@@ -92,9 +86,9 @@ main(
  *
  * Tcl_AppInit --
  *
- *	This function performs application-specific initialization. Most
+ *	This procedure performs application-specific initialization. Most
  *	applications, especially those that incorporate additional packages,
- *	will have their own version of this function.
+ *	will have their own version of this procedure.
  *
  * Results:
  *	Returns a standard Tcl completion code, and leaves an error message in
@@ -114,12 +108,13 @@ Tcl_AppInit(
 	return TCL_ERROR;
     }
 
-#ifdef TCL_TEST
 #ifdef TCL_XT_TEST
     if (Tclxttest_Init(interp) == TCL_ERROR) {
 	return TCL_ERROR;
     }
 #endif
+
+#ifdef TCL_TEST
     if (Tcltest_Init(interp) == TCL_ERROR) {
 	return TCL_ERROR;
     }
@@ -127,7 +122,7 @@ Tcl_AppInit(
 #endif /* TCL_TEST */
 
     /*
-     * Call the init functions for included packages. Each call should look
+     * Call the init procedures for included packages. Each call should look
      * like this:
      *
      * if (Mod_Init(interp) == TCL_ERROR) {
@@ -140,7 +135,7 @@ Tcl_AppInit(
 
     /*
      * Call Tcl_CreateCommand for application-specific commands, if they
-     * weren't already created by the init functions called above.
+     * weren't already created by the init procedures called above.
      */
 
     /*
@@ -151,9 +146,9 @@ Tcl_AppInit(
      */
 
 #ifdef DJGPP
-    Tcl_SetVar(interp, "tcl_rcFileName", "~/tclsh.rc", TCL_GLOBAL_ONLY);
+    (Tcl_SetVar)(interp, "tcl_rcFileName", "~/tclsh.rc", TCL_GLOBAL_ONLY);
 #else
-    Tcl_SetVar(interp, "tcl_rcFileName", "~/.tclshrc", TCL_GLOBAL_ONLY);
+    (Tcl_SetVar)(interp, "tcl_rcFileName", "~/.tclshrc", TCL_GLOBAL_ONLY);
 #endif
 
     return TCL_OK;
