@@ -2,30 +2,62 @@
  * tclAppInit.c --
  *
  *	Provides a default version of the main program and Tcl_AppInit
- *	function for Tcl applications (without Tk). Note that this program
- *	must be built in Win32 console mode to work properly.
+ *	procedure for tclsh and other Tcl-based applications (without Tk).
+ *	Note that this program must be built in Win32 console mode to work properly.
  *
- * Copyright (c) 1996-1997 by Sun Microsystems, Inc.
- * Copyright (c) 1998-1999 by Scriptics Corporation.
+ * Copyright (c) 1993 The Regents of the University of California.
+ * Copyright (c) 1994-1997 Sun Microsystems, Inc.
+ * Copyright (c) 1998-1999 Scriptics Corporation.
  *
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclAppInit.c,v 1.13.2.14 2010/05/03 16:30:42 dgp Exp $
+ * RCS: @(#) $Id: tclAppInit.c,v 1.13.2.15 2010/09/23 13:35:43 dgp Exp $
  */
 
+/* TODO: This file does not compile in UNICODE mode.
+ * See [Freq 2965056]: Windows build with -DUNICODE
+ */
+#undef UNICODE
+#undef _UNICODE
+
 #include "tcl.h"
+#define WIN32_LEAN_AND_MEAN
 #include <windows.h>
+#undef WIN32_LEAN_AND_MEAN
 #include <locale.h>
+#include <stdlib.h>
+#include <tchar.h>
 
 #ifdef TCL_TEST
-extern Tcl_PackageInitProc	Tcltest_Init;
-extern Tcl_PackageInitProc	Tcltest_SafeInit;
+extern Tcl_PackageInitProc Tcltest_Init;
+extern Tcl_PackageInitProc Tcltest_SafeInit;
 #endif /* TCL_TEST */
 
 #if defined(__GNUC__)
-static void		setargv(int *argcPtr, char ***argvPtr);
+static void setargv(int *argcPtr, TCHAR ***argvPtr);
 #endif /* __GNUC__ */
+
+/*
+ * The following #if block allows you to change the AppInit function by using
+ * a #define of TCL_LOCAL_APPINIT instead of rewriting this entire file. The
+ * #if checks for that #define and uses Tcl_AppInit if it doesn't exist.
+ */
+
+#ifndef TCL_LOCAL_APPINIT
+#define TCL_LOCAL_APPINIT Tcl_AppInit
+#endif
+extern int TCL_LOCAL_APPINIT(Tcl_Interp *interp);
+
+/*
+ * The following #if block allows you to change how Tcl finds the startup
+ * script, prime the library or encoding paths, fiddle with the argv, etc.,
+ * without needing to rewrite Tcl_Main()
+ */
+
+#ifdef TCL_LOCAL_MAIN_HOOK
+extern int TCL_LOCAL_MAIN_HOOK(int *argc, TCHAR ***argv);
+#endif
 
 /*
  *----------------------------------------------------------------------
@@ -35,61 +67,44 @@ static void		setargv(int *argcPtr, char ***argvPtr);
  *	This is the main program for the application.
  *
  * Results:
- *	None: Tcl_Main never returns here, so this function never returns
+ *	None: Tcl_Main never returns here, so this procedure never returns
  *	either.
  *
  * Side effects:
- *	Whatever the application does.
+ *	Just about anything, since from here we call arbitrary Tcl code.
  *
  *----------------------------------------------------------------------
  */
 
 int
-main(
+_tmain(
     int argc,
-    char *argv[])
+    TCHAR *argv[])
 {
-    /*
-     * The following #if block allows you to change the AppInit function by
-     * using a #define of TCL_LOCAL_APPINIT instead of rewriting this entire
-     * file. The #if checks for that #define and uses Tcl_AppInit if it
-     * doesn't exist.
-     */
-
-#ifndef TCL_LOCAL_APPINIT
-#define TCL_LOCAL_APPINIT Tcl_AppInit
-#endif
-    extern int TCL_LOCAL_APPINIT(Tcl_Interp *interp);
-
-    /*
-     * The following #if block allows you to change how Tcl finds the startup
-     * script, prime the library or encoding paths, fiddle with the argv,
-     * etc., without needing to rewrite Tcl_Main()
-     */
-
-#ifdef TCL_LOCAL_MAIN_HOOK
-    extern int TCL_LOCAL_MAIN_HOOK(int *argc, char ***argv);
-#endif
-
-    char *p;
+    TCHAR *p;
 
     /*
      * Set up the default locale to be standard "C" locale so parsing is
      * performed correctly.
      */
 
+    setlocale(LC_ALL, "C");
+
+    /*
+     * Get our args from the c-runtime. Ignore lpszCmdLine.
+     */
+
 #if defined(__GNUC__)
     setargv(&argc, &argv);
 #endif
-    setlocale(LC_ALL, "C");
 
     /*
      * Forward slashes substituted for backslashes.
      */
 
-    for (p = argv[0]; *p != '\0'; p++) {
-	if (*p == '\\') {
-	    *p = '/';
+    for (p = argv[0]; *p != TEXT('\0'); p++) {
+	if (*p == TEXT('\\')) {
+	    *p = TEXT('/');
 	}
     }
 
@@ -98,7 +113,6 @@ main(
 #endif
 
     Tcl_Main(argc, argv, TCL_LOCAL_APPINIT);
-
     return 0;			/* Needed only to prevent compiler warning. */
 }
 
@@ -107,9 +121,9 @@ main(
  *
  * Tcl_AppInit --
  *
- *	This function performs application-specific initialization. Most
+ *	This procedure performs application-specific initialization. Most
  *	applications, especially those that incorporate additional packages,
- *	will have their own version of this function.
+ *	will have their own version of this procedure.
  *
  * Results:
  *	Returns a standard Tcl completion code, and leaves an error message in
@@ -129,13 +143,6 @@ Tcl_AppInit(
 	return TCL_ERROR;
     }
 
-#ifdef TCL_TEST
-    if (Tcltest_Init(interp) == TCL_ERROR) {
-	return TCL_ERROR;
-    }
-    Tcl_StaticPackage(interp, "Tcltest", Tcltest_Init, NULL);
-#endif /* TCL_TEST */
-
 #if defined(STATIC_BUILD) && TCL_USE_STATIC_PACKAGES
     {
 	extern Tcl_PackageInitProc Registry_Init;
@@ -154,30 +161,38 @@ Tcl_AppInit(
    }
 #endif
 
+#ifdef TCL_TEST
+    if (Tcltest_Init(interp) == TCL_ERROR) {
+	return TCL_ERROR;
+    }
+    Tcl_StaticPackage(interp, "Tcltest", Tcltest_Init, Tcltest_SafeInit);
+#endif /* TCL_TEST */
+
     /*
-     * Call the init functions for included packages. Each call should look
+     * Call the init procedures for included packages. Each call should look
      * like this:
      *
      * if (Mod_Init(interp) == TCL_ERROR) {
      *     return TCL_ERROR;
      * }
      *
-     * where "Mod" is the name of the module.
+     * where "Mod" is the name of the module. (Dynamically-loadable packages
+     * should have the same entry-point name.)
      */
 
     /*
      * Call Tcl_CreateCommand for application-specific commands, if they
-     * weren't already created by the init functions called above.
+     * weren't already created by the init procedures called above.
      */
 
     /*
      * Specify a user-specific startup file to invoke if the application is
      * run interactively. Typically the startup file is "~/.apprc" where "app"
-     * is the name of the application. If this line is deleted then no
-     * user-specific startup file will be run under any conditions.
+     * is the name of the application. If this line is deleted then no user-
+     * specific startup file will be run under any conditions.
      */
 
-    Tcl_SetVar(interp, "tcl_rcFileName", "~/tclshrc.tcl", TCL_GLOBAL_ONLY);
+    (Tcl_SetVar)(interp, "tcl_rcFileName", "~/tclshrc.tcl", TCL_GLOBAL_ONLY);
     return TCL_OK;
 }
 
@@ -212,13 +227,13 @@ Tcl_AppInit(
 static void
 setargv(
     int *argcPtr,		/* Filled with number of argument strings. */
-    char ***argvPtr)		/* Filled with argument strings (malloc'd). */
+    TCHAR ***argvPtr)		/* Filled with argument strings (malloc'd). */
 {
-    char *cmdLine, *p, *arg, *argSpace;
-    char **argv;
+    TCHAR *cmdLine, *p, *arg, *argSpace;
+    TCHAR **argv;
     int argc, size, inquote, copy, slashes;
 
-    cmdLine = GetCommandLineA();	/* INTL: BUG */
+    cmdLine = GetCommandLine();
 
     /*
      * Precompute an overly pessimistic guess at the number of arguments in
@@ -226,30 +241,30 @@ setargv(
      */
 
     size = 2;
-    for (p = cmdLine; *p != '\0'; p++) {
-	if ((*p == ' ') || (*p == '\t')) {	/* INTL: ISO space. */
+    for (p = cmdLine; *p != TEXT('\0'); p++) {
+	if ((*p == TEXT(' ')) || (*p == TEXT('\t'))) {	/* INTL: ISO space. */
 	    size++;
-	    while ((*p == ' ') || (*p == '\t')) { /* INTL: ISO space. */
+	    while ((*p == TEXT(' ')) || (*p == TEXT('\t'))) { /* INTL: ISO space. */
 		p++;
 	    }
-	    if (*p == '\0') {
+	    if (*p == TEXT('\0')) {
 		break;
 	    }
 	}
     }
-    argSpace = (char *) ckalloc(
-	    (unsigned) (size * sizeof(char *) + strlen(cmdLine) + 1));
-    argv = (char **) argSpace;
-    argSpace += size * sizeof(char *);
+    argSpace = (TCHAR *) ckalloc(
+	    (unsigned) (size * sizeof(TCHAR *) + (_tcslen(cmdLine) * sizeof(TCHAR)) + 1));
+    argv = (TCHAR **) argSpace;
+    argSpace += size * sizeof(TCHAR *);
     size--;
 
     p = cmdLine;
     for (argc = 0; argc < size; argc++) {
 	argv[argc] = arg = argSpace;
-	while ((*p == ' ') || (*p == '\t')) {	/* INTL: ISO space. */
+	while ((*p == TEXT(' ')) || (*p == TEXT('\t'))) {	/* INTL: ISO space. */
 	    p++;
 	}
-	if (*p == '\0') {
+	if (*p == TEXT('\0')) {
 	    break;
 	}
 
@@ -257,14 +272,14 @@ setargv(
 	slashes = 0;
 	while (1) {
 	    copy = 1;
-	    while (*p == '\\') {
+	    while (*p == TEXT('\\')) {
 		slashes++;
 		p++;
 	    }
-	    if (*p == '"') {
+	    if (*p == TEXT('"')) {
 		if ((slashes & 1) == 0) {
 		    copy = 0;
-		    if ((inquote) && (p[1] == '"')) {
+		    if ((inquote) && (p[1] == TEXT('"'))) {
 			p++;
 			copy = 1;
 		    } else {
@@ -275,13 +290,13 @@ setargv(
 	    }
 
 	    while (slashes) {
-		*arg = '\\';
+		*arg = TEXT('\\');
 		arg++;
 		slashes--;
 	    }
 
-	    if ((*p == '\0') || (!inquote &&
-		    ((*p == ' ') || (*p == '\t')))) {	/* INTL: ISO space. */
+	    if ((*p == TEXT('\0')) || (!inquote &&
+		    ((*p == TEXT(' ')) || (*p == TEXT('\t'))))) {	/* INTL: ISO space. */
 		break;
 	    }
 	    if (copy != 0) {
@@ -290,7 +305,7 @@ setargv(
 	    }
 	    p++;
 	}
-	*arg = '\0';
+	*arg = TEXT('\0');
 	argSpace = arg + 1;
     }
     argv[argc] = NULL;
